[package]
name = "svm"
version = "0.1.0"
edition = "2021"

rust-version = "1.70.0"

readme = "../README.md"
description = "A fantasy virtual machine with limits on resources."
keywords = ["virtual", "emulation", "computer", "assembly"]
repository = "https://github.com/BenMcAvoy/StrawberryVM"
categories = ["emulators", "game-engines"]
license = "MIT"

publish = false

[dependencies.jasm]
path = "../assembler"

[dependencies.strawberryvm]
path = "../strawberry"
