[package]
name = "strawberryvm"
version = "0.2.0"
edition = "2021"

rust-version = "1.70.0"

readme = "../README.md"
description = "A fantasy virtual machine with limits on resources."
keywords = ["virtual", "emulation", "computer", "assembly"]
repository = "https://github.com/BenMcAvoy/StrawberryVM"
categories = ["emulators", "game-engines"]
license = "MIT"

[dependencies.strawberryvm-derive]
path = "../macros"
version = ">=0.1"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
unwrap_used = "deny"
correctness = "deny"
pedantic = "deny"
perf = "deny"

suspicious = "warn"
complexity = "warn"
nursery = "warn"
style = "warn"
cargo = "warn"
