[package]
name = "strawberryvm-derive"
version = "0.1.1"
edition = "2021"

repository = "https://github.com/BenMcAvoy/StrawberryVM"
description = "Derive macros for StrawberryVM."
keywords = ["rust", "proc-macro", "derive"]
categories = ["development-tools"]
license = "MIT"

[lib]
proc-macro = true

[dependencies]
quote = "^1"

[dependencies.syn]
version = "^2"
features = [ "full" ]
